--- a/style/style.css
+++ b/style/style.css
@@ -88,7 +88,7 @@ nav ul li a:hover{
 /* banner start */
 
 #banner-section{
-    background-image: url("/images/banner.jpg");
+    background-image: url("./images/banner.jpg");
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
